correcion archivo list

--- a/src/views/personas/list.hbs
+++ b/src/views/personas/list.hbs
@@ -7,7 +7,7 @@
             <table class="table text-center">
  
                 <thead>
-                    <tr class="table dark">
+                    <tr class="table-dark">
                         <th scope="col" class="col-4"> Nombre    </th>
                         <th scope="col"> Apellido  </th>
                         <th scope="col"> Edad      </th>
