--- a/src/views/partials/navigations.hbs
+++ b/src/views/partials/navigations.hbs
@@ -7,13 +7,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link "  href="#">Inicio</a>
+          <a class="nav-link "  href="/">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">crear</a>
+          <a class="nav-link" href="/add">crear</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Listar</a>
+          <a class="nav-link" href="/list">Listar</a>
         </li>
       
       </ul>
