--- a/src/views/personas/add.hbs
+++ b/src/views/personas/add.hbs
@@ -6,21 +6,30 @@
                     <h3 class="text-uppercase"> Crear Nueva Persona</h3>
                 </div>
                 <div class="card-body">
-                    <form action="/add" method="post">
+                    <form action="/add" method="post" enctype="multipart/form-data">
 
                         <div class="input-group mt-2">
                             <label for="name" class="input-group-text"> Nombre Persona </label>
-                            <input class="form-control" type="text" name="name" id="name" placeholder="Ejemplo: Alexander " autofocus required >
+                            <input class="form-control" type="text" name="name" id="name" placeholder="Ejemplo: Cristhian David" autofocus required >
                         </div>
 
                         <div class="input-group mt-2">
                             <label for="lastname" class="input-group-text"> Apellido Persona </label>
-                            <input class="form-control" type="text" name="lastname" id="lastname" placeholder="Ejemplo: Buitrago" autofocus required >
+                            <input class="form-control" type="text" name="lastname" id="lastname" placeholder="Ejemplo: Galvis Cardona"  required >
                         </div>
 
                         <div class="input-group mt-2">
                             <label for="age" class="input-group-text"> Edad </label>
-                            <input class="form-control" type="number" name="age" id="age" placeholder="0" autofocus required >
+                            <input class="form-control" type="number" name="age" id="age" placeholder="0" required >
+                        </div>
+
+                        <div class="input-group mt-2">
+                            <label for="observacion" class="input-group-text"> Observacion </label>
+                            <input class="form-control" type="text" name="observacion" id="observacion" placeholder="Escriba una observacion" required >
+                        </div>
+
+                        <div class="input-group mt-2">
+                            <input class="form-control" type="file" name="file" id="file">
                         </div>
 
                         <div class="form-group mt-4 d-grid gap-2">
